--- a/src/Core/Portfolio.Core/Portfolio.Core.csproj
+++ b/src/Core/Portfolio.Core/Portfolio.Core.csproj
@@ -8,9 +8,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Contracts\Portfolio.Contracts\Portfolio.Contracts.csproj" />
 	  <ProjectReference Include="..\Portfolio.Domain\Portfolio.Domain.csproj" />
 	</ItemGroup>
 
