--- a/src/Web/Portfolio.Web/Portfolio.Web.csproj
+++ b/src/Web/Portfolio.Web/Portfolio.Web.csproj
@@ -12,15 +12,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Portfolio.Core\Portfolio.Core.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Portfolio.Data.PostgreSql\Portfolio.Data.PostgreSql.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
