--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -8,5 +8,11 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"S3": {
+		"AccessKey": "AccessKey",
+		"SecretKey": "SecretKey",
+		"ServiceUrl": "http://localhost:9000",
+		"DefaultBucketName": "Portfolio.Default"
+	}
 }
