--- a/src/Infrastructure/Portfolio.Data.S3/Portfolio.Data.S3.csproj
+++ b/src/Infrastructure/Portfolio.Data.S3/Portfolio.Data.S3.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.305.28" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Portfolio.Core\Portfolio.Core.csproj" />
+  </ItemGroup>
+
 </Project>
