--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"DbConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=Portfolio.Backend;Pooling=true;"
+		"DbConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=Portfolio.Backend2;Pooling=true;"
 	},
 	"Logging": {
 		"LogLevel": {
