#16 - Создание проекта фоновых служб

--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -14,5 +14,9 @@
 		"SecretKey": "SecretKey",
 		"ServiceUrl": "http://localhost:9000",
 		"DefaultBucketName": "Portfolio.Default"
+	},
+	"Hangfire": {
+		"DisplayDashBoard": true,
+		"TestCron": "* * * * *"
 	}
 }
