--- a/src/WorkerServices/Portfolio.Worker/Portfolio.Worker.csproj
+++ b/src/WorkerServices/Portfolio.Worker/Portfolio.Worker.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.7.23" />
+		<PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+	</ItemGroup>
+
 </Project>
