--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -18,5 +18,12 @@
 	"Hangfire": {
 		"DisplayDashBoard": true,
 		"TestCron": "* * * * *"
+	},
+	"EmailSettings": {
+		"SmptClient": "smtp.yandex.com",
+		"Address": "email2024@yandex.ru",
+		"AppPassword": "password",
+		"EnableSsl": true,
+		"Port": 587
 	}
 }
