--- a/src/WorkerServices/Portfolio.Worker/Portfolio.Worker.csproj
+++ b/src/WorkerServices/Portfolio.Worker/Portfolio.Worker.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\Portfolio.Core\Portfolio.Core.csproj" />
+	</ItemGroup>
+
 </Project>
