--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -24,6 +24,7 @@
 		"Address": "email2024@yandex.ru",
 		"AppPassword": "password",
 		"EnableSsl": true,
-		"Port": 587
+		"Port": 587,
+		"IsSentInLog": true
 	}
 }
