--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -17,7 +17,8 @@
 	},
 	"Hangfire": {
 		"DisplayDashBoard": true,
-		"TestCron": "* * * * *"
+		"TestCron": "* * * * *",
+		"EmailMessageCron": "*/5 * * * * *"
 	},
 	"EmailSettings": {
 		"SmptClient": "smtp.yandex.com",
