#22 - Создать сервис отправки уведомлений по почте (#27)
* #22
Сущность сообщения

* #22

Работа с контекстом БД

* #22

Миграция

* #22

Сервис отправки сообщений

* #22

Обновление appsettings.json

* #22

Служба для отправки email-сообщений

* #22

Правка в логике ParticipationActivitySubmittedDomainEventHandler

* #22

*Заглушка в лог

* #22

Фиксы

--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -17,6 +17,15 @@
 	},
 	"Hangfire": {
 		"DisplayDashBoard": true,
-		"TestCron": "* * * * *"
+		"TestCron": "* * * * *",
+		"EmailMessageCron": "*/5 * * * * *"
+	},
+	"EmailSettings": {
+		"SmptClient": "smtp.yandex.com",
+		"Address": "email2024@yandex.ru",
+		"AppPassword": "password",
+		"EnableSsl": true,
+		"Port": 587,
+		"IsSentInLog": true
 	}
 }
