--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,36 @@
 version: '3.4'
 
 services:
-  minio:
+
+  portfolio.api:
+    image: ${DOCKER_REGISTRY-}portfolio_api
+    build:
+      context: .
+      dockerfile: src/Web/Portfolio.Web/Dockerfile
+    container_name: portfolio.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DbConnectionString=User ID=portfolio;Password=portfolio;Host=localhost;Port=5433;Database=Portfolio.Backend;Pooling=true;
+    depends_on:
+      - portfolio.postgres
+      - portfolio.minio
+    ports:
+      - "8000:80"
+
+  portfolio.postgres:
+    container_name: portfolio_postgres
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: portfolio
+      POSTGRES_PASSWORD: portfolio
+      POSTGRES_DB: "Portfolio.Backend"
+    expose:
+      - "5433"
+    ports:
+      - "5433:5432"
+
+  portfolio.minio:
     container_name: portfolio_minio
     image: minio/minio:RELEASE.2021-09-15T04-54-25Z.hotfix.908b0f10a
     environment:
@@ -13,3 +42,4 @@ services:
     ports:
       - "9000:9000"
       - "9001:9001"
+
