--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,39 @@
 version: '3.4'
 
 services:
-  minio:
+
+  portfolio.api:
+    image: ${DOCKER_REGISTRY-}portfolio_api
+    build:
+      context: .
+      dockerfile: src/Web/Portfolio.Web/Dockerfile
+    container_name: portfolio.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DbConnectionString=User ID=portfolio;Password=portfolio;Host=portfolio_postgres;Port=5432;Database=Portfolio.Backend;Pooling=true;
+      - S3__ServiceUrl=http://portfolio_minio:9000
+    depends_on:
+      - portfolio.postgres
+      - portfolio.minio
+    ports:
+      - "8000:80"
+
+  portfolio.postgres:
+    container_name: portfolio_postgres
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: portfolio
+      POSTGRES_PASSWORD: portfolio
+      POSTGRES_DB: "Portfolio.Backend"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data 
+    expose:
+      - "5433"
+    ports:
+      - "5433:5432"
+
+  portfolio.minio:
     container_name: portfolio_minio
     image: minio/minio:RELEASE.2021-09-15T04-54-25Z.hotfix.908b0f10a
     environment:
@@ -9,7 +41,12 @@ services:
       MINIO_ROOT_PASSWORD: SecretKey
     command: server --console-address ":9001" /data
     volumes:
-      - ./docker/minio:/data
+      - minio_data:/data
     ports:
       - "9000:9000"
       - "9001:9001"
+
+volumes:
+  minio_data:
+  postgres_data:
+
