--- a/src/Infrastructure/Portfolio.Data.RabbitMq/Portfolio.Data.RabbitMq.csproj
+++ b/src/Infrastructure/Portfolio.Data.RabbitMq/Portfolio.Data.RabbitMq.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\Portfolio.Core\Portfolio.Core.csproj" />
+	</ItemGroup>
+
 </Project>
