--- a/src/Web/Portfolio.Web/appsettings.json
+++ b/src/Web/Portfolio.Web/appsettings.json
@@ -15,6 +15,9 @@
 		"ServiceUrl": "http://localhost:9000",
 		"DefaultBucketName": "Portfolio.Default"
 	},
+	"Rabbit": {
+		"Url": "amqp://guest:guest@localhost:5672"
+	},
 	"Hangfire": {
 		"DisplayDashBoard": true,
 		"TestCron": "* * * * *",
